fix(WidescreenMode): Align item at flex-start on first zoom

--- a/src/style/widescreenMode.less
+++ b/src/style/widescreenMode.less
@@ -200,7 +200,7 @@ body[class] {
 
         &.resized {
           .item-image {
-            max-height: ~"calc(100vh - 180px)";
+            max-height: ~"calc(100vh - 200px)";
             top: auto !important;
             left: auto !important;
           }
